Fix headers being too big smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,6 +131,15 @@ main {
         top: 70px;
         font-size: 80%;
     }
+
+    h1 {
+        font-size: 90%;
+    }
+
+    h2, 
+    h3 {
+        font-size: 80%;
+    }
 }
 
 /* ------------------------------------ Footer */
